Add start/finish quiz request
