# app/Entities/Quiz/FinishQuiz.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Entities\Quiz;
+
+/**
+ * @OA\Schema(
+ *     required={
+ *         "answers",
+ *     }
+ * )
+ */
+class FinishQuiz
+{
+  /**
+     * @OA\Property(
+     *      type="array",
+     *      description="List IDs, of user answers",
+     *      @OA\Items(type="integer")
+     * )
+     * @var
+     */
+    public $answers;
+}
